--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 # Auto detect text files and perform LF normalization
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
